x button fix on mobile

--- a/static_files/public/CSS/index.css
+++ b/static_files/public/CSS/index.css
@@ -539,4 +539,7 @@ input:focus {
     #addParty {
         margin-left: -3px;
     }
+    .xBtn {
+        margin-left: 90px;
+    }
 }
